--- a/demos/css/default.css
+++ b/demos/css/default.css
@@ -1,11 +1,11 @@
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 html, body {
-  color: #333;
-  background: #008080;
+    color: #333;
+    background: #008080;
 }
 
 .window {
@@ -77,4 +77,23 @@ iframe {
 #infobox {
     margin-left: 20px;
     padding-bottom: 10px;
+}
+
+
+/* Basic styling for the startbar */
+#startbar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #ddd;
+    padding: 5px;
+}
+
+.startbar-button {
+    padding: 5px 10px;
+    margin-right: 5px;
+    background-color: #eee;
+    border: 1px solid #ccc;
+    cursor: pointer;
 }
